# Moviedatabase-MVC

./: .gitignore  README.md  data.json  db.sqlite3  package-lock.json  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: user-story-template.md
.history/: requirements_20231121211958.txt
.history/qfb_main/: urls_20231011115838.py  urls_20231122123658.py  urls_20231122123732.py  urls_20231122182943.py  urls_20231122183021.py  urls_20231122215145.py  urls_20231122220047.py  urls_20231122220118.py  urls_20231122220201.py  urls_20231122220217.py  urls_20231123181837.py  urls_20231123183115.py  urls_20231123183154.py  urls_20231123183556.py  urls_20231123183602.py  urls_20231123184304.py  urls_20231123184327.py  urls_20231123184337.py  views_20231121212000.py  views_20231122033023.py  views_20231122034712.py  views_20231122034714.py  views_20231122125509.py  views_20231122181531.py  views_20231123183353.py  views_20231123183604.py  views_20231123191336.py
.history/quickfire_bulletin/: settings_20231011105345.py  settings_20231122041824.py  (+3 more)
comments/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
feedback/: admin.py  forms.py  models.py  tests.py  views.py
qfb_main/: admin.py  api-result.json  apps.py  comments.py  forms.py  models.py  test.py  tests.py  urls.py  views.py
quickfire_bulletin/: db_routers.py  settings.py  urls.py  views.py  wsgi.py
staticfiles/: staticfiles.json
templates/: base.html  comment_display.html  comment_form.html  comments.html  feedback.html  index.html  newsarticle_detail.html  post_detail.html
(+171 files in other folders)
