[tool.poetry]
name = "quickfire-bulletin1"
version = "0.1.0"
description = ""
authors = ["hypergeek-dev <dennis.mariegaard.jensen@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
asgiref = "3.7.2"
bleach = "6.0.0"
blis = "0.7.11"
catalogue = "2.0.10"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
click = "8.1.7"
cloudpathlib = "0.15.1"
colorama = "0.4.6"
confection = "0.1.3"
cymem = "2.0.8"
dj-database-url = "0.5.0"
dj3-cloudinary-storage = "0.0.6"
django = "3.2.21"
django-cloudinary-storage = "0.3.0"
django-summernote = "0.8.20.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
gunicorn = "21.2.0"
idna = "3.4"
jinja2 = "3.1.2"
langcodes = "3.3.0"
markupsafe = "2.1.3"
murmurhash = "1.0.10"
packaging = "23.1"
pathy = "0.10.2"
preshed = "3.0.9"
psycopg2 = "2.9.7"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
python-decouple = "3.8"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
requests = "2.31.0"
six = "1.16.0"
smart-open = "6.4.0"
spacy = "3.7.1"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlparse = "0.4.4"
srsly = "2.4.8"
thinc = "8.2.1"
tqdm = "4.66.1"
typer = "0.9.0"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "1.26.15"
wasabi = "1.1.2"
weasel = "0.3.2"
webencodings = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
